Added TODO for missed spot

--- a/performance.jade
+++ b/performance.jade
@@ -70,6 +70,8 @@ html
           // Find our output targets
           var resultsEl = document.querySelector('#results');
 
+          // TODO: Realizing we need to do matching on similar content (i.e. same width image + same diff in selection)
+
           // Iterate over our sets
           Array.prototype.forEach.call(compareSetEls, function forEachCompareSetEl (compareSetEl, i) {
             // Find our source images
