--- a/performance.jade
+++ b/performance.jade
@@ -63,34 +63,49 @@ html
         // Simplifiy domo reference
         var D = window.domo;
 
-        // Define and run our update logic
-        bulkUpdateSelection();
-        function bulkUpdateSelection() {
-          // Specify target area (this would be done via overlay selection)
-          // DEV: Target area gathered from `/prototype`
-          var targetArea = {left: 159, top: 0, width: 205, height: 63.133331298828125};
+        // Specify target area (this would be done via overlay selection)
+        // DEV: Target area gathered from `/prototype`
+        var targetArea = {left: 159, top: 0, width: 205, height: 63.133331298828125};
 
+        // TODO: Realizing we need to do matching on similar content (i.e. same width image + same diff in selection)
+        //   It looks like Gemini's comparison library isn't built for browser
+        //     https://github.com/gemini-testing/looks-same
+        //   For now, use direct comparison with `get-pixels` and `ndarray`
+        //   Actually, we can prob use a second canvas with negative placement for x/y and same width/neight
+        //     This is more future-proof and dodges loading `ndarray` dependencies
+        //     Although, it's likely less efficient since we have to extract image data and compare it
+
+        // Start our chain of methods
+        findSelectionMatches();
+        function findSelectionMatches() {
           // Find our sets of images to update
           var compareSetEls = document.querySelectorAll('[data-compare-set]');
 
+          // Convert image sets into objects so we can add metadata
+          var compareSets = Array.prototype.map.call(compareSetEls, function createCompareSet (compareSetEl, i) {
+            return {
+              currentImg: compareSetEl.querySelector('[data-compare-type=current]'),
+              diffImg: compareSetEl.querySelector('[data-compare-type=diff]'),
+              refImg: compareSetEl.querySelector('[data-compare-type=ref]'),
+              name: 'path/to/image/' + i + '/Chrome'
+            };
+          });
+          var matchingCompareSets= compareSets.slice();
+
+          // Pass through matching sets to `bulkUpdateSelection`
+          bulkUpdateSelection(matchingCompareSets);
+        }
+
+        function bulkUpdateSelection(compareSets) {
           // Find our output targets
           var resultsEl = document.querySelector('#results');
           var resultsDocFrag = document.createDocumentFragment();
 
-          // TODO: Realizing we need to do matching on similar content (i.e. same width image + same diff in selection)
-          //   It looks like Gemini's comparison library isn't built for browser
-          //     https://github.com/gemini-testing/looks-same
-          //   For now, use direct comparison with `get-pixels` and `ndarray`
-          //   Actually, we can prob use a second canvas with negative placement for x/y and same width/neight
-          //     This is more future-proof and dodges loading `ndarray` dependencies
-          //     Although, it's likely less efficient since we have to extract image data and compare it
-
           // Iterate over our sets
-          Array.prototype.forEach.call(compareSetEls, function forEachCompareSetEl (compareSetEl, i) {
-            // Find our source images
-            var currentImg = compareSetEl.querySelector('[data-compare-type=current]');
-            var diffImg = compareSetEl.querySelector('[data-compare-type=diff]');
-            var refImg = compareSetEl.querySelector('[data-compare-type=ref]');
+          Array.prototype.forEach.call(compareSets, function forEachCompareSetEl (compareSet) {
+            // Localize our references
+            var currentImg = compareSet.currentImg;
+            var refImg = compareSet.refImg;
 
             // Create a canvas
             // https://github.com/scijs/get-pixels/blob/7c447cd979637b31e47e148f238a1e71611af481/dom-pixels.js#L14-L18
@@ -127,7 +142,7 @@ html
             var resultGroupEl = D.DIV([
               D.TR([
                 // TODO: Add collapse support like in `gemini-gui`
-                D.TD({colspan: 3}, D.B('path/to/image/' + i + '/Chrome'))
+                D.TD({colspan: 3}, D.B(compareSet.name))
               ]),
               D.TR([
                 // TODO: Move style out of inline and to classes for more performance
