Fixed up naming for results

--- a/performance.jade
+++ b/performance.jade
@@ -220,8 +220,8 @@ html
               D.TR([
                 // TODO: Move style out of inline and to classes for more performance
                 D.TD({style: 'padding-right: 10px;'}, 'Save update:'),
-                D.TD('Original:'),
-                D.TD('Updated:')
+                D.TD('Original ref:'),
+                D.TD('Updated ref:')
               ]),
               D.TR([
                 D.TD({
