--- a/performance.jade
+++ b/performance.jade
@@ -16,6 +16,12 @@ html
     p
       | This page is a proof of concept to verify we won't have performance issues with a lot of pages
 
+    //- TODO: When moving to repo, don't work on polishing overlay in separate repo yet
+    //-   First: Make sure we can get approval fully working (i.e. gemini does a comparison + approval data with no fuss)
+    //-   Second: Improve selection in this repo so we can work out any kinks that might change its API
+    //-     This might break a rule of mine which is open source/break out first but technically it's already open source =/
+    //-   Third: Figure out jawbone and magnification etc (maybe do something in a mockup tool)
+
     //- Load an images directly from our report
     table
       - var imgHeight = '250';
