Renamed most developed page to index.jade for now

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title gist-gemini-fancy performance
+    title multi-image-mergetool
     style.
       /* Perform nice resets */
       body {
