--- a/lib/index.jade
+++ b/lib/index.jade
@@ -45,14 +45,14 @@ html
         //- Create set which has matching selection
         each image_set in image_sets
           div(data-compare-set=i)
-            img(data-compare-type="current", src=image_set.currentImg)
-            img(data-compare-type="diff", src=image_set.diffImg)
-            img(data-compare-type="ref", src=image_set.refImg)
+            img(data-compare-type="current", src="/images#{image_set.currentImg}")
+            img(data-compare-type="diff", src="/images#image_set.diffImg")
+            img(data-compare-type="ref", src="/images#{image_set.refImg}")
           //- Create set without matching selection
           div(data-compare-set=i + 1)
-            img(data-compare-type="current", src=image_set.currentImg)
-            img(data-compare-type="diff", src=image_set.currentImg)
-            img(data-compare-type="ref", src=image_set.currentImg)
+            img(data-compare-type="current", src="/images#{image_set.currentImg}")
+            img(data-compare-type="diff", src="/images#{image_set.currentImg}")
+            img(data-compare-type="ref", src="/images#{image_set.currentImg}")
         - i += 2
 
     //- Define an output area for images
