--- a/lib/index.jade
+++ b/lib/index.jade
@@ -99,6 +99,7 @@ html
       document.addEventListener('DOMContentLoaded', function handleReady () {
         // Simplifiy domo reference
         var D = window.domo;
+        return;
 
         // Specify target area (this would be done via overlay selection)
         // DEV: Target area gathered from `/prototype`
