--- a/lib/index.jade
+++ b/lib/index.jade
@@ -22,7 +22,7 @@ html
         // Expose our images
         // TODO: Expose images in tree list like gemini-gui, maybe even simplified variants like GitHub
         //   (e.g. `a/b/c` when only 1 file)
-        var imgHeight = '250';
+        var imgWidth = '400';
         var imageSets = window.imageSets;
         var docFrag = document.createDocumentFragment();
         imageSets.forEach(function createImageSet (imgSet, i) {
@@ -55,21 +55,25 @@ html
                 D.TR([
                   D.TD([
                     D.IMG({
-                      'data-compare-type': 'current', src: '/images/' + imgSet.currentImg,
-                      height: imgHeight
+                      'data-compare-type': 'current',
+                      src: '/images/' + imgSet.currentImg,
+                      style: 'width: 100%; max-width: ' + imgWidth + 'px'
                     })
                   ]),
                   D.TD([
                     // TODO: Ditch `expected-diff-img` as we have multiple images now
                     D.IMG({
-                      'data-compare-type': 'diff', src: '/images/' + imgSet.diffImg,
-                      height: imgHeight, class: 'expected-diff-img'
+                      'data-compare-type': 'diff',
+                      src: '/images/' + imgSet.diffImg,
+                      class: 'expected-diff-img',
+                      style: 'width: 100%; max-width: ' + imgWidth + 'px',
                     })
                   ]),
                   D.TD([
                     D.IMG({
-                      'data-compare-type': 'ref', src: '/images/' + imgSet.refImg,
-                      height: imgHeight
+                      'data-compare-type': 'ref',
+                      src: '/images/' + imgSet.refImg,
+                      style: 'width: 100%; max-width: ' + imgWidth + 'px'
                     })
                   ])
                 ])
